@@ -1,3 +1,4 @@
+* IMPROVEMENT: Optimized gttlvdump for large TLV files.
 * IMPROVEMENT: Added "b64" as an alias to "base64"
 * BUGFIX: Fixed input data intake in gttlvdump and gttlvgrep, where data pointer is moved instead of copying.
 * BUGFIX: Fixed gttlvdump input data empty buffer handling.
